tests/compile_fail/as_ref/unknown_field_attr_arg.stderr
error[E0412]: cannot find type `baz` in this scope
 --> tests/compile_fail/as_ref/unknown_field_attr_arg.rs:3:14
  |
3 |     #[as_ref(baz)]
  |              ^^^ not found in this scope
